# Skillful_hands

./: Cargo.toml  Dioxus.toml  Makefile  README.md  index.html
assets/: main.css
assets/css/: home.css  legal.css  project.css  service.css  services.css
assets/img/foto_web/: README.txt  _manifest.json  index.csv
src/: app.rs  main.rs
src/components/: contact_form.rs  cookie_banner.rs  footer.rs  header.rs  icons.rs  logo_mark.rs  mod.rs  review_card.rs  scroll_link.rs  service_card.rs
src/pages/: home.rs  legal.rs  mod.rs  project_detail.rs  service_detail.rs  services.rs
